--- a/app-api/application/application-main-api/appsettings.json
+++ b/app-api/application/application-main-api/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "Logging": {    
+  "Logging": {
     "Debug": {
       "LogLevel": {
         "Default": "Warning"
@@ -12,6 +12,14 @@
     }
   },
   "AllowedHosts": "*",
+
+  //use essa chave para connections string, a pipepline se encarrega de alterar quando for produção
+  //exemplo para MySQL em MySqlDependency veja como ficou
+  "ConnectionStrings": {
+    "MySQL": "Server=localhost;Port=1234;Database=data;Uid=henry;Pwd=1234"
+  },
+
+
   "database": {
     "mysql": {
       "server": "<data base endpoint>",
